--- a/src/app/order/components/product-item/product-item.component.html
+++ b/src/app/order/components/product-item/product-item.component.html
@@ -1,4 +1,4 @@
-<div class="product-item" [class.disabled]="loading"  (click)="triggerAddItem(product)">
+<div class="product-item" [class.disabled]="loading"  (click)="triggerAddItem()">
   <ion-img [src]="product.image ? product.image : '/assets/images/avatar-food.svg'"></ion-img>
   <div
     style="position: absolute; bottom: 0; padding: 0.5rem; width: 100%; background: white; font-size: 70%">
