--- a/src/app/order/components/payment/payment.component.scss
+++ b/src/app/order/components/payment/payment.component.scss
@@ -5,7 +5,8 @@
 
 .payment-content {
   background: white;
-  height: 100%;
+  max-height: 100%;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
   border-radius: 11.25px;
