--- a/src/app/order/components/payment/payment.component.scss
+++ b/src/app/order/components/payment/payment.component.scss
@@ -5,8 +5,7 @@
 
 .payment-content {
   background: white;
-  max-height: 100%;
-  min-height: 300px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   border-radius: 11.25px;
