--- a/src/app/order/order.page.scss
+++ b/src/app/order/order.page.scss
@@ -101,11 +101,11 @@ ion-searchbar {
 
 
 :host ::ng-deep .product-item {
-  width: 140px;
-  height: 140px;
+  width: 124px;
+  height: 124px;
   box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
   text-align: center;
-  margin: 14px;
+  margin: 10px 7px ;
   position: relative;
   border-radius: 15px;
   overflow: hidden;
