--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -39,7 +39,7 @@
                    [class.active]="(activeParentCategory$ | async)?.id === cate.id"
                    class="menu-item"
                    (click)="selectParentCategory(cate)">
-                <img src="/assets/icon/drink.png"/>
+                <img [src]="cate.icon || '/assets/icon/drink.png'"/>
                 <div> {{cate.name}}</div>
               </div>
             </ng-template>
@@ -61,23 +61,25 @@
             <button style="margin-left: 1.5rem" (click)="toggleLang()">
               <!--            <img class="icon" [src]="'/assets/icon/' + currentLang.toUpperCase() + '.png'" alt="" style="height: 4rem; width: 4rem">-->
             </button>
-            <button style="margin-left: 1.5rem">
-              <img class="icon" src="/assets/icon/lock.png" alt="" style="height: 4rem; width: 4rem">
-            </button>
+<!--            <button style="margin-left: 1.5rem">-->
+<!--              <img class="icon" src="/assets/icon/lock.png" alt="" style="height: 4rem; width: 4rem">-->
+<!--            </button>-->
           </div>
           <div class="main-content"
                style=" flex: 1; display: flex; align-items: stretch; padding: 10px; overflow: hidden; min-width: 0">
             <div class="order" style="flex: 1; display: flex; flex-direction: column; overflow: hidden; min-width: 0">
-              <div class="categories">
-                <div *ngIf="(statusCategory$ | async) === 'loaded'" class="category-item"
-                     [class.active]="(activeSubCategory$ | async) === null"
-                     (click)="selectSubCategory(null)">All
-                </div>
-                <div class="category-item" *ngFor="let subCate of subCategories$ | async"
-                     [class.active]="(activeSubCategory$ | async)?.id === subCate.id"
-                     (click)="selectSubCategory(subCate)">
-                  <img [src]="'/assets/icon/buger.png'" alt="" style="height: 1rem; width: 1rem; margin-right: 0.5rem">
-                  {{subCate.name}}
+              <div style="padding: 0 14px">
+                <div class="categories">
+                  <div *ngIf="(statusCategory$ | async) === 'loaded'" class="category-item"
+                       [class.active]="(activeSubCategory$ | async) === null"
+                       (click)="selectSubCategory(null)">All
+                  </div>
+                  <div class="category-item" *ngFor="let subCate of subCategories$ | async"
+                       [class.active]="(activeSubCategory$ | async)?.id === subCate.id"
+                       (click)="selectSubCategory(subCate)">
+                    <img [src]="subCate.icon ||  '/assets/icon/buger.png'" alt="" style="height: 1rem; width: 1rem; margin-right: 0.5rem">
+                    {{subCate.name}}
+                  </div>
                 </div>
               </div>
 
@@ -98,7 +100,6 @@
                     </ng-container>
                     <div style=" display: flex; flex-wrap: wrap" *ngIf="slide.status === 'loaded'">
                       <app-product-item *ngFor="let product of slide.products" [product]="product"></app-product-item>
-
                       <div *ngIf="slide.products.length === 0">
                         No thing to show!
                       </div>
@@ -107,7 +108,7 @@
                 </ion-slides>
               </div>
             </div>
-            <div class="payment" style="width: 352px; display: flex; flex-direction: column; padding: 0 1rem;">
+            <div class="payment" style="width: 352px; display: flex; flex-direction: column;">
               <div class="payment-header"
                    style="height: 3rem; color: #184c7c; display: flex; justify-content: space-between; align-items: center; font-size: 1.2rem"
                    *ngIf="currentLocation$ | async">
@@ -116,9 +117,6 @@
                   <ng-container *ngIf="currentTable$">| <strong>Table {{(currentTable$ | async)?.name}}</strong>
                   </ng-container>
                 </div>
-                <button>
-                  <img src="/assets/icon/bell.png" alt="" style="height: 2.5rem; width: 2.5rem">
-                </button>
               </div>
               <app-payment></app-payment>
             </div>
