--- a/src/app/order/components/payment/payment.component.scss
+++ b/src/app/order/components/payment/payment.component.scss
@@ -63,19 +63,38 @@
   }
 }
 
-ion-button.submit-btn {
+ion-button.submit-btn, ion-button.checkout-btn {
   display: block;
   width: 100%;
   height: 50px;
   font-weight: bold;
-  border-radius: 22.5px;
   text-align: center;
+  overflow: hidden
+}
+
+.submit-btn {
+  border-bottom-left-radius:  22.5px;;
+  border-top-left-radius:  22.5px;
+  --background: #184c7c;
+  --background-activated: #184c7c;
+  --background-focused: #184c7c;
+  --background-hover: #184c7c;
+  --color: white;
+
+  &.border-radius-right {
+    border-bottom-right-radius:  22.5px;;
+    border-top-right-radius:  22.5px;
+  }
+}
+.checkout-btn {
+  border-bottom-right-radius:  22.5px;;
+  border-top-right-radius:  22.5px;
+
   --background: #ffcb2a;
   --background-activated: #fcd66a;
   --background-focused: #ffd148;
   --background-hover: #ffd148;
-  --color: #184c7c;;
-  overflow: hidden
+  --color: #184c7c;
 }
 
 .btn-method {
