--- a/src/app/order/components/payment/payment.component.html
+++ b/src/app/order/components/payment/payment.component.html
@@ -11,7 +11,7 @@
             <ng-container *ngIf="order.items.length">[{{order.items.length}}]</ng-container>
           </div>
           <div class="item-qty">{{'qty' | translate}}</div>
-          <div class="item-price">{{'price' | translate}}</div>
+          <div class="item-price" style="padding-right: 5px">{{'price' | translate}}</div>
           <div></div>
         </div>
       </div>
