--- a/src/app/order/components/payment/order-item/order-item.component.html
+++ b/src/app/order/components/payment/order-item/order-item.component.html
@@ -1,16 +1,30 @@
-<div #divElement
-  class="order-item"
-  [ngClass]="getOrderItemClass(item)">
-  <div class="item-bagtag">
-    <img *ngIf="item.guest" src="/assets/icon/guest.png" alt="" style="width: 1.5rem; height: 1rem">
+<div #divElement>
+  <div class="order-item"
+       [ngClass]="getOrderItemClass(item)">
+    <div class="item-bagtag">
+      <img *ngIf="item.guest" src="/assets/icon/guest.png" alt="" style="width: 1.5rem; height: 1rem">
+    </div>
+    <div class="item-name">
+      <strong>{{item.variant.name}}</strong>
+    </div>
+    <div class="item-qty">
+      {{item.quantity}}
+    </div>
+    <div class="item-price" >
+      <span [class.line-through]="!!item.is_voucher">{{item.price | formatCurrency}}</span>
+      <ng-container *ngIf="!!item.is_voucher">
+        <br>
+        <small style="color: grey">
+          Voucher applied!
+        </small>
+      </ng-container>
+
+    </div>
   </div>
-  <div class="item-name">
-    <strong>{{item.variant.name}}</strong>
+  <div *ngIf="item.description" style="margin-top: -10px">
+    <small  style="color: grey; padding: 0 1rem">
+      {{item.description}}
+    </small>
   </div>
-  <div class="item-qty">
-    {{item.quantity}}
-  </div>
-  <div class="item-price">
-    {{item.price | formatCurrency}}
-  </div>
+
 </div>
