--- a/src/app/order/components/payment/payment.component.scss
+++ b/src/app/order/components/payment/payment.component.scss
@@ -58,7 +58,10 @@
     .item-price {
       width: 100px;
       text-align: right;
-      padding-right: 10px;
+
+      .line-through {
+        text-decoration: line-through;
+      }
     }
   }
 }
